# testOBSweb

./: Readme.md
SMW_TODO_PROJ/: SMW_TODO_PROJ.ino
obs-studio/: .gitignore
obs-studio/UI/: api-interface.cpp  obs-app.cpp  window-basic-main-outputs.cpp  window-basic-main.cpp  window-basic-settings-stream.cpp  window-basic-source-select.cpp
obs-studio/UI/forms/: OBSBasic.ui
obs-studio/libobs/: obs-data.c  obs-module.c  obs-output.c  obs-source.c  obs.c
obs-studio/libobs/media-io/: video-scaler-ffmpeg.c
obs-studio/plugins/: CMakeLists.txt
obs-studio/plugins/obs-ffmpeg/: obs-ffmpeg-mux.c
obs-studio/plugins/todo-plugin/: CMakeLists.txt  obs-ffmpeg-mux.c  obs-ffmpeg.cpp
obs-studio/plugins/todo-plugin/ffmpeg-mux/: CMakeLists.txt  ffmpeg-mux.c
obs-studio/plugins/todo-plugin/src/: todo-output.cpp  todo-plugin.cpp
obs-websocket-client-js/: index.js  package-lock.json  package.json
